<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCustomerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="20sp"
            android:layout_marginVertical="10sp"
            android:text="@string/add_activity_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            />
        <EditText
            android:id="@+id/enter_name"
            android:hint="@string/name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10sp"/>
        <EditText
            android:id="@+id/enter_address"
            android:hint="@string/address_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10sp"/>
        <EditText
            android:id="@+id/enter_phone"
            android:hint="@string/phone_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10sp"/>
        <EditText
            android:id="@+id/enter_comment"
            android:hint="@string/enter_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp">
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_confirm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/cancel_button"
                android:layout_marginRight="100sp"
                />
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/confirm_button"
                android:layout_marginLeft="100sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>